Projet GL/Projet_GL/src/test/deca/context/valid/increment3/while.deca
// Test simple boucle

// Historique : cree le 11/01/2023

{
    int a = 2;

    while(a != 10){
        a = a + 1;
    }
}