Projet GL/Projet_GL/src/test/deca/context/invalid/increment2/int-not-int.deca
// Test int := not int

// Historique : cree le 11/01/2023

{
    int a = !1;
}